--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.1"
+    "styled-components": "^4.0.0-beta.8"
   },
   "keywords": [
     "gatsby",
