--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-react": "^7.10.0",
     "gatsby-plugin-eslint": "^2.0.1",
     "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-plugin-stylelint": "^3.0.1",
+    "@danbruegge/gatsby-plugin-stylelint": "^3.0.1",
     "prettier": "^1.14.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
