--- a/package.json
+++ b/package.json
@@ -3,16 +3,6 @@
   "description": "Gatsby v2 extended default starter with linting and styled-components",
   "version": "1.0.0",
   "author": "Daniel Brüggemann",
-  "dependencies": {
-    "gatsby": "^2.0.0-rc.0",
-    "gatsby-plugin-react-helmet": "^3.0.0-rc.0",
-    "normalize.css": "^8.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.0.0-beta.8"
-  },
   "keywords": [
     "gatsby",
     "starter",
@@ -27,9 +17,22 @@
     "format": "prettier --ignore-path .gitignore --write '**/*.{js,jsx,json}'",
     "lint:es": "eslint --ignore-path .gitignore --fix .",
     "lint:style": "stylelint 'src/**/*.{js,jsx}'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "yarn type-check -- --watch"
   },
-  "devDependencies": {
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danbruegge/gatsby-starter-default-extended"
+  },
+  "dependencies": {
+    "@danbruegge/gatsby-plugin-stylelint": "^3.0.1",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.6",
+    "@typescript-eslint/eslint-plugin": "^1.1.0",
+    "@typescript-eslint/parser": "^1.1.0",
     "babel-plugin-styled-components": "^1.5.1",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -39,18 +42,23 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.10.0",
+    "gatsby": "^2.0.45",
     "gatsby-plugin-eslint": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-styled-components": "^3.0.0",
-    "@danbruegge/gatsby-plugin-stylelint": "^3.0.1",
+    "gatsby-plugin-typescript": "^2.0.4",
+    "normalize.css": "^8.0.0",
     "prettier": "^1.14.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.0.2",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.2",
-    "stylelint-webpack-plugin": "^0.10.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danbruegge/gatsby-starter-default-extended"
+    "stylelint-webpack-plugin": "^0.10.5",
+    "typescript": "^3.2.4"
   }
 }
