--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby serve",
+    "dev": "gatsby develop",
     "prebuild": "yarn type-check && yarn lint:es && yarn lint:style",
     "build": "gatsby build",
     "format": "prettier --ignore-path .gitignore --write '**/*.{js,jsx,ts,tsx,json}'",
-    "lint:es": "eslint --ignore-path .gitignore --fix .",
+    "lint:es": "eslint --ignore-path .gitignore --fix --ext .js,.jsx,.ts,.tsx .",
     "lint:style": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-check": "tsc --noEmit",
@@ -31,14 +32,14 @@
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
-    "@types/styled-components": "^4.1.6",
+    "@types/styled-components": "^4.1.8",
+    "@types/typography": "^0.16.2",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
     "babel-plugin-styled-components": "^1.5.1",
     "eslint": "^5.2.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-loader": "^2.1.0",
-    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.10.0",
@@ -47,18 +48,19 @@
     "gatsby-plugin-react-helmet": "^3.0.1",
     "gatsby-plugin-styled-components": "^3.0.0",
     "gatsby-plugin-typescript": "^2.0.4",
-    "normalize.css": "^8.0.0",
+    "gatsby-plugin-typography": "^2.2.7",
     "prettier": "^1.14.0",
-    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.0.2",
+    "react-typography": "^0.16.18",
+    "styled-components": "^4.1.3",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.2",
     "stylelint-webpack-plugin": "^0.10.5",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "typography": "^0.16.18"
   }
 }
