--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "esnext",
     "jsx": "react",
     "lib": ["dom", "es2015", "es2017"],
-    "baseUrl": "./src/"
+    "baseUrl": "./src/",
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"]
 }
