--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "scripts": {
     "start": "gatsby serve",
     "dev": "gatsby develop",
-    "prebuild": "yarn type-check && yarn lint:es && yarn lint:style",
+    "prebuild": "yarn lint:types && yarn lint:es && yarn lint:style",
     "build": "gatsby build",
     "format": "prettier --ignore-path .gitignore --write '**/*.{js,jsx,ts,tsx,json}'",
     "lint:es": "eslint --ignore-path .gitignore --fix --ext .js,.jsx,.ts,.tsx .",
     "lint:style": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -- --watch"
+    "lint:types": "tsc --noEmit",
+    "lint:types:watch": "yarn type-check -- --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^3.0.1",
@@ -27,9 +27,8 @@
     "@types/typography": "^0.16.2",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
-    "babel-plugin-styled-components": "^1.5.1",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.1",
@@ -37,7 +36,7 @@
     "gatsby": "^2.0.45",
     "gatsby-plugin-eslint": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.0.1",
-    "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.0.4",
     "gatsby-plugin-typography": "^2.2.7",
     "prettier": "^1.14.0",
@@ -46,7 +45,7 @@
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
     "styled-components": "^4.1.3",
-    "stylelint": "^9.4.0",
+    "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.2",
