--- a/.eslintrc
+++ b/.eslintrc
@@ -14,8 +14,10 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "react/prop-types": "off",
     "@typescript-eslint/indent": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "env": {
     "browser": true,
