--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "jsx": "react",
     "lib": ["dom", "es2015", "es2017"],
     "baseUrl": "./src/",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*"]
 }
